feat(v1): update swagger docs
