# packages/v1/quests/main.go
@@ -12,10 +12,15 @@ import (
 )
 
 // Main godoc
-// @Summary hello
-// @Description hello humie
-// @Success 200
-// @Router /quests/daily [get]
+// @Summary Daily Quests
+// @Description Gets the daily quests, as of 00:00:00 UTC, a given account.
+// @Produce json
+// @Param account query string true "account to get daily quests" Example(TESTK4BURRDGVVHAX2FBY7CPRC2RTTVRRN4C2TVDCHRCXNTFGL3TVSDROE)
+// @Success 200 {object} _types.ResponseBody
+// @failure 400 {object} _types.ResponseBody "if the account param is not provided or invalid"
+// @failure 405 {object} _types.ResponseBody "will return if it is not a GET request"
+// @failure 500 {object} _types.ResponseBody
+// @Router /v1/quests [get]
 func Main(request _types.Request) *_types.Response {
 	var dailyQuests []_types.DailyQuest
 
