# packages/v1/versions/main.go
@@ -11,6 +11,12 @@ import (
 //go:embed VERSION
 var version string
 
+// Main godoc.
+// @Summary API Information
+// @Description Gets API information including the environment and version.
+// @Produce json
+// @Success 200 {object} _types.ResponseBody
+// @Router /v1/versions [get]
 func Main() *_types.Response {
 	return &_types.Response{
 		Body: _types.ResponseBody{
